# stack-prism

./: .travis.yml  Example.hs  ExampleG.hs  ExampleGeneric.hs  ExampleTH.hs  Makefile  Piso.cabal  README.md  stack-prism.cabal
Data/: Iso.hs  Piso.hs  StackPrism.hs
Data/Iso/: Common.hs  Core.hs  Generic.hs  TH.hs
Data/Piso/: Common.hs  Generic.hs  TH.hs
Data/StackPrism/: Generic.hs  TH.hs
tests/: TestGeneric.hs  TestTH.hs  Tests.hs
