Name:           Piso
Version:        0.1
Synopsis:       Partial isomorphisms
Description:   	Partial isomorphisms


Author:         Martijn van Steenbergen
Maintainer:     martijn@van.steenbergen.nl
Stability:      Experimental
Copyright:      Some Rights Reserved (CC) 2013 Martijn van Steenbergen
Homepage:       https://github.com/MedeaMelana/Piso
Bug-reports:    https://github.com/MedeaMelana/Piso/issues


Cabal-Version:  >= 1.6
License:        BSD3
License-file:   LICENSE
Category:       Data
Build-type:     Simple


Library
  Exposed-Modules:  Data.Iso,
                    Data.Iso.Core,
                    Data.Iso.TH,
                    Data.Iso.Common,
  Build-Depends:    base >= 3.0 && < 5

Source-Repository head
  Type:         git
  Location:     https://github.com/MedeaMelana/Piso
