Name:           stack-prism
Version:        0.1
Synopsis:       Stack prisms
Description:    Haskell lens prisms that use stack types


Author:         Martijn van Steenbergen, Sjoerd Visscher
Maintainer:     martijn@van.steenbergen.nl
Stability:      Experimental
Copyright:      Some Rights Reserved (CC) 2014 Martijn van Steenbergen
Homepage:       https://github.com/MedeaMelana/stack-prism
Bug-reports:    https://github.com/MedeaMelana/stack-prism/issues


Cabal-Version:  >= 1.6
License:        BSD3
License-file:   LICENSE
Category:       Data
Build-type:     Simple


Library
  Exposed-Modules:  Data.StackPrism,
                    Data.StackPrism.TH,
                    Data.StackPrism.Generic
  Build-Depends:    base >= 3.0 && < 5,
                    profunctors >= 4.0 && < 5,
                    tagged,
                    transformers,
                    template-haskell

Source-Repository head
  Type:         git
  Location:     https://github.com/MedeaMelana/stack-prism
